--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t zoraxl/docker-react -f Dockerfile.dev
-  
+  - docker build -t zoraxl/docker-react -f Dockerfile.dev .
+
 script:
   - docker run zoraxl/docker-react npm run test -- --coverage
